@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.13 2005/01/11 21:42:38 reinoud Exp $
+$NetBSD: distinfo,v 1.14 2005/01/27 16:09:35 reinoud Exp $
 
-SHA1 (UDFclient.0.3.2.tgz) = f45d391aa5d19587c25e6c05c9bd7bd5e5b6b031
-Size (UDFclient.0.3.2.tgz) = 187288 bytes
+SHA1 (UDFclient.0.3.3.tgz) = 0eb1d8e3c1408f8fbb7047e127e69d67c972dbbb
+Size (UDFclient.0.3.3.tgz) = 187473 bytes
